--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^7.1.1",
     "@react-google-maps/api": "^2.20.6",
     "@react-oauth/google": "^0.12.2",
+    "@stomp/stompjs": "^7.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -38,6 +39,7 @@
     "react-social-login-buttons": "^4.1.1",
     "react-toastify": "^11.0.5",
     "reactjs-social-login": "^2.6.3",
+    "sockjs-client": "^1.6.1",
     "sweetalert2": "^11.21.0",
     "swiper": "^11.2.6",
     "uuid": "^11.1.0",
